Overhaul fonts config

--- a/fontconfig/.config/fontconfig/conf.d/60-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/60-latin.conf
@@ -13,9 +13,6 @@
 		<prefer>
 			<family>Libertinus Serif</family>
 			<family>Source Serif 4</family>
-			<family>Georgia</family>
-			<family>Charter</family>
-			<family>EB Garamond</family>
 		</prefer>
 		<default>
 			<family>DejaVu Serif</family>
@@ -27,12 +24,9 @@
 		<prefer>
 			<family>FiraGO</family>
 			<family>Source Sans 3</family>
-			<family>IBM Plex Sans</family>
-			<family>Fira Sans</family>
-			<family>Roboto</family>
 		</prefer>
 		<default>
-			<family>DejaVu Sans Condensed</family>
+			<family>DejaVu Sans</family>
 		</default>
 	</alias>
 
@@ -41,10 +35,6 @@
 		<prefer>
 			<family>Iosevka Comfy Wide Fixed</family>
 			<family>Fira Mono</family>
-			<family>Go Mono</family>
-			<family>IBM Plex Mono</family>
-			<family>Input Mono Condensed</family>
-			<family>Source Code Pro</family>
 		</prefer>
 		<default>
 			<family>DejaVu Sans Mono</family>
