--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -24,8 +24,8 @@ module-margin-left = 2
 module-margin-right = 3
 
 font-0 = "Roboto:size=9:hintstyle=hintslight;2"
-font-1 = "Arimo Nerd Font:pixelsize=9;2"
-
+font-1 = "Font Awesome 5 Free Regular:pixelsize=9;2"
+font-2 = "Font Awesome 5 Free Solid:pixelsize=9;2"
 modules-left = bspwm bspwm_panel_monocle xkeyboard
 modules-center = date
 modules-right = notmuch pipewire backlight memory cpu coretemp filesystem battery wifi powermenu
@@ -95,10 +95,10 @@ label-discharging = %time%
 time-format = %H:%M
 
 ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
 
 ramp-capacity-0-foreground = ${colors.red}
 ramp-capacity-1-foreground = ${colors.magenta}
@@ -108,28 +108,28 @@ type = internal/network
 interface = ${env:WIFI_INTERFACE:wlp2s0}
 interval = 5.0
 
-format-connected = 直 <label-connected>
+format-connected =  <label-connected>
 label-connected = %essid%
 
-format-disconnected = 睊
+format-disconnected = 
 format-disconnected-foreground = ${colors.red}
 
 [module/memory]
 type = internal/memory
 interval = 10
-format-prefix = " "
+format-prefix = " "
 label = %percentage_used%%
 
 [module/cpu]
 type = internal/cpu
 interval = 10
-format-prefix = " "
+format-prefix = " "
 
 [module/filesystem]
 type = internal/fs
 mount-0 = /
 label-mounted = %percentage_used%%
-format-mounted-prefix = " "
+format-mounted-prefix = " "
 
 [module/notmuch]
 type = custom/script
@@ -149,7 +149,7 @@ scroll-down = ~/bin/polybar_pipewire decrease
 
 [module/date]
 type = custom/script
-exec = date '+%a %-d %b ∙ %R'
+exec = date '+%a %-d %b %R'
 interval = 60
 
 [module/coretemp]
@@ -162,7 +162,7 @@ base-temperature = 20
 warn-temperature = 90
 units = true
 
-format-prefix = " "
+format-prefix = " "
 format-warn-foreground = ${colors.red}
 
 label = %temperature-c%
@@ -175,7 +175,7 @@ format-prefix = " "
 [module/powermenu]
 type = custom/menu
 label-open = 
-label-close = 
+label-close = 
 expand-right = false
 label-separator = " | "
 
