polybar: tweak icon display

--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -170,24 +170,24 @@ label-warn = %temperature-c%
 
 [module/backlight]
 type = internal/xbacklight
-format-prefix = " "
+format-prefix = " "
 
 [module/powermenu]
 type = custom/menu
 label-open = 
 label-close = 
 expand-right = false
-label-separator = " | "
+label-separator = "  |  "
 
 click-left = #powermenu.open.0
 
-menu-0-0 =  Power Off
+menu-0-0 = |    Power Off
 menu-0-0-exec = "sudo poweroff"
-menu-0-1 =  Restart
+menu-0-1 =   Restart
 menu-0-1-exec = "sudo reboot"
-menu-0-2 =  Quit X
+menu-0-2 =   Quit X
 menu-0-2-exec = "bspc quit"
-menu-0-3 = ⏾ Suspend
+menu-0-3 =   Suspend
 menu-0-3-exec = "sudo zzz"
 
 menu-0-0-foreground = ${colors.magenta}
