--- a/fontconfig/.config/fontconfig/conf.d/60-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/60-latin.conf
@@ -33,7 +33,7 @@
 	<alias>
 		<family>monospace</family>
 		<prefer>
-			<family>Iosevka Comfy Wide Fixed</family>
+			<family>Roboto Mono</family>
 			<family>Fira Mono</family>
 		</prefer>
 		<default>
