--- a/fontconfig/.config/fontconfig/conf.d/60-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/60-latin.conf
@@ -33,8 +33,8 @@
 	<alias>
 		<family>monospace</family>
 		<prefer>
+			<family>Fira Code</family>
 			<family>Roboto Mono</family>
-			<family>Fira Mono</family>
 		</prefer>
 		<default>
 			<family>DejaVu Sans Mono</family>
