polybar: use Material Iconss

--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -24,8 +24,7 @@ module-margin-left = 2
 module-margin-right = 3
 
 font-0 = "Roboto:size=9:hintstyle=hintslight;2"
-font-1 = "Font Awesome 5 Free Regular:pixelsize=9;2"
-font-2 = "Font Awesome 5 Free Solid:pixelsize=9;2"
+font-1 = "Material Icons:pixelsize=10:hintstyle=hintslight;3"
 modules-left = bspwm bspwm_panel_monocle xkeyboard
 modules-center = date
 modules-right = notmuch pipewire backlight memory cpu coretemp filesystem battery wifi powermenu
@@ -89,16 +88,16 @@ full-at = 98
 
 format-charging = <ramp-capacity>  <label-charging>
 format-discharging = <ramp-capacity>  <label-discharging>
-format-full-prefix = "  "
+format-full-prefix = " "
 
 label-discharging = %time%
 time-format = %H:%M
 
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
 
 ramp-capacity-0-foreground = ${colors.red}
 ramp-capacity-1-foreground = ${colors.magenta}
@@ -108,28 +107,28 @@ type = internal/network
 interface = ${env:WIFI_INTERFACE:wlp2s0}
 interval = 5.0
 
-format-connected =  <label-connected>
+format-connected =  <label-connected>
 label-connected = %essid%
 
-format-disconnected = 
+format-disconnected = 
 format-disconnected-foreground = ${colors.red}
 
 [module/memory]
 type = internal/memory
 interval = 10
-format-prefix = " "
+format-prefix = " "
 label = %percentage_used%%
 
 [module/cpu]
 type = internal/cpu
 interval = 10
-format-prefix = " "
+format-prefix = " "
 
 [module/filesystem]
 type = internal/fs
 mount-0 = /
 label-mounted = %percentage_used%%
-format-mounted-prefix = " "
+format-mounted-prefix = " "
 
 [module/notmuch]
 type = custom/script
@@ -162,7 +161,7 @@ base-temperature = 20
 warn-temperature = 90
 units = true
 
-format-prefix = " "
+format-prefix = " "
 format-warn-foreground = ${colors.red}
 
 label = %temperature-c%
@@ -170,24 +169,24 @@ label-warn = %temperature-c%
 
 [module/backlight]
 type = internal/xbacklight
-format-prefix = " "
+format-prefix = " "
 
 [module/powermenu]
 type = custom/menu
-label-open = 
-label-close = 
+label-open = 
+label-close = 
 expand-right = false
-label-separator = "  |  "
+label-separator = "    "
 
 click-left = #powermenu.open.0
 
-menu-0-0 = |    Power Off
+menu-0-0 =     Power Off
 menu-0-0-exec = "sudo poweroff"
-menu-0-1 =   Restart
+menu-0-1 =   Restart
 menu-0-1-exec = "sudo reboot"
-menu-0-2 =   Quit X
+menu-0-2 =   Quit X
 menu-0-2-exec = "bspc quit"
-menu-0-3 =   Suspend
+menu-0-3 =   Suspend
 menu-0-3-exec = "sudo zzz"
 
 menu-0-0-foreground = ${colors.magenta}
