--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -24,7 +24,7 @@ module-margin-left = 2
 module-margin-right = 3
 
 font-0 = "Roboto:size=9:hintstyle=hintslight;2"
-font-1 = "Material Icons:pixelsize=10:hintstyle=hintslight;3"
+font-1 = "Material Symbols Sharp:pixelsize=10:hintstyle=hintslight;3"
 modules-left = bspwm bspwm_panel_monocle xkeyboard
 modules-center = date
 modules-right = notmuch pipewire backlight memory cpu coretemp filesystem battery wifi powermenu
@@ -84,7 +84,7 @@ type = internal/battery
 battery = BAT0
 adapter = ADP1
 poll-interval = 5
-full-at = 98
+full-at = 97
 
 format-charging = <ramp-capacity>  <label-charging>
 format-discharging = <ramp-capacity>  <label-discharging>
@@ -169,7 +169,7 @@ label-warn = %temperature-c%
 
 [module/backlight]
 type = internal/xbacklight
-format-prefix = " "
+format-prefix = " "
 
 [module/powermenu]
 type = custom/menu
@@ -180,13 +180,13 @@ label-separator = "    "
 
 click-left = #powermenu.open.0
 
-menu-0-0 =     Power Off
+menu-0-0 =     Power Off
 menu-0-0-exec = "sudo poweroff"
 menu-0-1 =   Restart
 menu-0-1-exec = "sudo reboot"
 menu-0-2 =   Quit X
 menu-0-2-exec = "bspc quit"
-menu-0-3 =   Suspend
+menu-0-3 =   Suspend
 menu-0-3-exec = "sudo zzz"
 
 menu-0-0-foreground = ${colors.magenta}
