fontconfig: remove superfluous conf files

--- a/fontconfig/.config/fontconfig/conf.d/60-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/60-latin.conf
@@ -13,10 +13,8 @@
 		<prefer>
 			<family>Libertinus Serif</family>
 			<family>Source Serif 4</family>
-		</prefer>
-		<default>
 			<family>DejaVu Serif</family>
-		</default>
+		</prefer>
 	</alias>
 
 	<alias>
@@ -24,20 +22,17 @@
 		<prefer>
 			<family>FiraGO</family>
 			<family>Source Sans 3</family>
-		</prefer>
-		<default>
 			<family>DejaVu Sans</family>
-		</default>
+		</prefer>
 	</alias>
 
 	<alias>
 		<family>monospace</family>
 		<prefer>
 			<family>IBM Plex Mono</family>
+			<family>Source Code Pro</family>
 			<family>Iosevka Comfy Wide Fixed</family>
-		</prefer>
-		<default>
 			<family>DejaVu Sans Mono</family>
-		</default>
+		</prefer>
 	</alias>
 </fontconfig>
