--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@
 /emacs/.emacs.d/eww-bookmarks
 /emacs/.emacs.d/feeds.el
 /emacs/.emacs.d/fontaine-latest-state.eld
+/emacs/.emacs.d/image-dired/
 /emacs/.emacs.d/lisp/kbd-mode
 /emacs/.emacs.d/lisp/lin
 /emacs/.emacs.d/lisp/mct
