emacs: add package `cursory’

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 /emacs/.emacs.d/.org-id-locations
 /emacs/.emacs.d/auto-save-list
 /emacs/.emacs.d/bookmarks
+/emacs/.emacs.d/cursory-latest-state.eld
 /emacs/.emacs.d/desktop
 /emacs/.emacs.d/diary
 /emacs/.emacs.d/ebdb.gpg
