--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -1,11 +1,3 @@
-# NOTE 2021-08-27: work-in-progress.
-
-# I was an Xterm user, but decided to check out Alacritty.  I don't have
-# use for most of this.  Just need a generic terminal as a fallback
-# option when I cannot use Emacs (i.e. rarely).
-
-
-
 # Configuration for Alacritty, the GPU enhanced terminal emulator.
 
 # Import additional configuration files
@@ -31,7 +23,7 @@ env:
   # available, otherwise `xterm-256color` is used.
   TERM: alacritty
 
-#window:
+window:
   # Window dimensions (changes require restart)
   #
   # Number of lines/columns (not pixels) in the terminal. The number of columns
@@ -53,9 +45,9 @@ env:
   #
   # Blank space added around the window in pixels. This padding is scaled
   # by DPI and the specified value is always added at both opposing sides.
-  #padding:
-  #  x: 0
-  #  y: 0
+  padding:
+   x: 3
+   y: 3
 
   # Spread additional padding evenly around the terminal content.
   #dynamic_padding: false
@@ -158,7 +150,7 @@ font:
     #style: Bold Italic
 
   # Point size
-  size: 6.5
+  size: 7
 
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
@@ -181,7 +173,7 @@ font:
   #use_thin_strokes: true
 
 # If `true`, bold text is drawn using the bright color variants.
-draw_bold_text_with_bright_colors: true
+#draw_bold_text_with_bright_colors: true
 
 # Colors
 import:
