gtk: tweak font size

--- a/gtk/.config/xsettingsd/xsettingsd.conf
+++ b/gtk/.config/xsettingsd/xsettingsd.conf
@@ -5,12 +5,12 @@ Gtk/ColorPalette "black:white:gray50:red:purple:blue:light blue:green:yellow:ora
 Gtk/CursorThemeName "Adwaita"
 Gtk/CursorThemeSize 0
 Gtk/DecorationLayout ":minimize,maximize,close"
-Gtk/FontName "Sans 10.5"
+Gtk/FontName "sans-serif-9"
 Gtk/IconSizes ""
 Gtk/KeyThemeName ""
 Gtk/MenuBarAccel ""
 Gtk/MenuImages 1
-Gtk/MonospaceFontName "Monospace 10"
+Gtk/MonospaceFontName "monospace-9"
 Gtk/ToolbarIconSize 3
 Gtk/ToolbarStyle "icons"
 Net/CursorBlink 1
