--- a/fontconfig/.config/fontconfig/conf.d/60-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/60-latin.conf
@@ -29,6 +29,7 @@
 		<family>monospace</family>
 		<prefer>
 			<family>Source Code Pro</family>
+			<family>Jetbrains Mono</family>
 			<family>IBM Plex Mono</family>
 			<family>DejaVu Sans Mono</family>
 		</prefer>
