--- a/fontconfig/.config/fontconfig/conf.d/60-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/60-latin.conf
@@ -28,9 +28,10 @@
 	<alias>
 		<family>monospace</family>
 		<prefer>
-			<family>Source Code Pro</family>
-			<family>Jetbrains Mono</family>
 			<family>IBM Plex Mono</family>
+			<family>SF Mono</family>
+			<family>Jetbrains Mono</family>
+			<family>Source Code Pro</family>
 			<family>DejaVu Sans Mono</family>
 		</prefer>
 	</alias>
