--- a/fontconfig/.config/fontconfig/conf.d/60-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/60-latin.conf
@@ -28,11 +28,11 @@
 	<alias>
 		<family>monospace</family>
 		<prefer>
+			<family>Iosevka</family>
 			<family>IBM Plex Mono</family>
 			<family>SF Mono</family>
 			<family>Jetbrains Mono</family>
 			<family>Source Code Pro</family>
-			<family>DejaVu Sans Mono</family>
 		</prefer>
 	</alias>
 </fontconfig>
