--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -27,3 +27,9 @@
 	prompt = false
 [pull]
 	ff = only
+[credential "https://github.com"]
+	helper = 
+	helper = !/usr/bin/gh auth git-credential
+[credential "https://gist.github.com"]
+	helper = 
+	helper = !/usr/bin/gh auth git-credential
