--- a/fontconfig/.config/fontconfig/conf.d/60-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/60-latin.conf
@@ -13,26 +13,30 @@
 		<prefer>
 			<family>Source Serif 4</family>
 			<family>Libertinus Serif</family>
-			<family>DejaVu Serif</family>
 		</prefer>
+    <default>
+      <family>DejaVu Serif</family>
+    </default>
 	</alias>
 
 	<alias>
 		<family>sans-serif</family>
 		<prefer>
 			<family>Source Sans 3</family>
-			<family>DejaVu Sans</family>
 		</prefer>
+    <default>
+      <family>DejaVu Sans</family>
+    </default>
 	</alias>
 
 	<alias>
 		<family>monospace</family>
 		<prefer>
-			<family>Iosevka</family>
-			<family>IBM Plex Mono</family>
-			<family>SF Mono</family>
-			<family>Jetbrains Mono</family>
+      <family>Iosevka Comfy Wide Motion Fixed</family>			<family>IBM Plex Mono</family>
 			<family>Source Code Pro</family>
 		</prefer>
+    <default>
+      <family>DejaVu Sans Mono</family>
+    </default>
 	</alias>
 </fontconfig>
