mpv: configure subtitles

--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -1,2 +1,7 @@
 hwdec=auto-safe
-ytdl-format="bestvideo[height<=?1080]+bestaudio/best"
+sub-visibility=yes
+sub-auto=fuzzy
+alang=nl,fr-FR,en
+slang=nl,fr-FR,en
+audio-file-auto=fuzzy
+save-position-on-quit=yes
