fontconfig: tweak settings for Iosevka Comfy

--- a/fontconfig/.config/fontconfig/conf.d/45-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/45-latin.conf
@@ -7,14 +7,14 @@
 	</its:rules>
 
 	<description>Set substitutions for Latin fonts</description>
-	<!--
-	    Mark common families with their generics so we'll get
-	    something reasonable
-	-->
 
 	<!--
-	    Serif faces
+	    Mark common families with their generics so we'll get
+	    something reasonable.
 	-->
+
+	<!-- Serif -->
+
 	<alias>
 		<family>Libertinus Serif</family>
 		<default><family>serif</family></default>
@@ -23,28 +23,31 @@
 		<family>Source Serif 4</family>
 		<default><family>serif</family></default>
 	</alias>
+  <alias>
+    <family>Iosevka Comfy Motion Duo</family>
+    <default><family>serif</family></default>
+  </alias>
 
-	<!--
-	    Sans-serif faces
-	-->
-	<alias>
-		<family>FiraGO</family>
-		<default><family>sans-serif</family></default>
-	</alias>
+	<!-- Sans Serif -->
+
+  <alias>
+    <family>Iosevka Comfy Duo</family>
+    <default><family>sans-serif</family></default>
+  </alias>
 	<alias>
 		<family>Source Sans 3</family>
 		<default><family>sans-serif</family></default>
 	</alias>
 
-	<!--
-	    Monospace faces
-	-->
-	<alias>
+	<!-- Monospaced -->
+
+	  <alias>
+    <!-- We need the "fixed" variant for programs such as XTerm -->
+    <family>Iosevka Comfy Motion Fixed</family>
+    <default><family>monospace</family></default>
+  </alias>
+  <alias>
 		<family>IBM Plex Mono</family>
-		<default><family>monospace</family></default>
-	</alias>
-	<alias>
-		<family>Iosevka Comfy Wide Fixed</family>
 		<default><family>monospace</family></default>
 	</alias>
 	<alias>
