--- a/fontconfig/.config/fontconfig/conf.d/60-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/60-latin.conf
@@ -8,35 +8,39 @@
 
 	<description>Set preferable fonts for Latin</description>
 
-	<alias>
+	<alias binding="strong">
 		<family>serif</family>
 		<prefer>
 			<family>Source Serif 4</family>
+			<family>Iosevka Comfy Motion Duo</family>
 			<family>Libertinus Serif</family>
 		</prefer>
-    <default>
-      <family>DejaVu Serif</family>
-    </default>
+		<default>
+			<family>DejaVu Serif</family>
+		</default>
 	</alias>
 
-	<alias>
+	<alias binding="strong">
 		<family>sans-serif</family>
 		<prefer>
 			<family>Source Sans 3</family>
+			<family>Iosevka Comfy Duo</family>
+			<family>Roboto</family>
 		</prefer>
-    <default>
-      <family>DejaVu Sans</family>
-    </default>
+		<default>
+			<family>DejaVu Sans</family>
+		</default>
 	</alias>
 
-	<alias>
+	<alias binding="strong">
 		<family>monospace</family>
 		<prefer>
-      <family>Iosevka Comfy Wide Motion Fixed</family>			<family>IBM Plex Mono</family>
+			<family>IBM Plex Mono</family>
+			<family>Iosevka Comfy Motion Fixed</family>
 			<family>Source Code Pro</family>
 		</prefer>
-    <default>
-      <family>DejaVu Sans Mono</family>
-    </default>
+		<default>
+			<family>DejaVu Sans Mono</family>
+		</default>
 	</alias>
 </fontconfig>
