--- a/fontconfig/.config/fontconfig/conf.d/60-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/60-latin.conf
@@ -11,6 +11,7 @@
 	<alias binding="strong">
 		<family>serif</family>
 		<prefer>
+			<family>Charter</family>
 			<family>Source Serif 4</family>
 			<family>Iosevka Comfy Motion Duo</family>
 			<family>Libertinus Serif</family>
