--- a/fontconfig/.config/fontconfig/conf.d/60-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/60-latin.conf
@@ -36,8 +36,7 @@
 	<alias binding="strong">
 		<family>monospace</family>
 		<prefer>
-			<family>IBM Plex Mono</family>
-			<family>Iosevka Comfy Motion Fixed</family>
+			<family>Iosevka Comfy</family>
 			<family>Source Code Pro</family>
 		</prefer>
 		<default>
