--- a/gtk/.config/gtk-3.0/settings.ini
+++ b/gtk/.config/gtk-3.0/settings.ini
@@ -8,6 +8,7 @@ gtk-enable-input-feedback-sounds=1
 gtk-font-name=sans-serif-9
 gtk-icon-theme-name=Adwaita
 gtk-menu-images=1
+gtk-application-prefer-dark-theme = true
 gtk-theme-name=Adwaita
 gtk-toolbar-icon-size=GTK_ICON_SIZE_SMALL_TOOLBAR
 gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
