--- a/fontconfig/.config/fontconfig/conf.d/60-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/60-latin.conf
@@ -36,7 +36,7 @@
 	<alias binding="strong">
 		<family>monospace</family>
 		<prefer>
-			<family>Iosevka Comfy</family>
+			<family>Iosevka Nerd Font</family>
 			<family>Source Code Pro</family>
 		</prefer>
 		<default>
