fontconfig: Add Liberation fonts

--- a/fontconfig/.config/fontconfig/conf.d/60-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/60-latin.conf
@@ -12,9 +12,8 @@
 		<family>serif</family>
 		<prefer>
 			<family>Charter</family>
+			<family>Liberation Serif</family>
 			<family>Source Serif 4</family>
-			<family>Iosevka Comfy Motion Duo</family>
-			<family>Libertinus Serif</family>
 		</prefer>
 		<default>
 			<family>DejaVu Serif</family>
@@ -24,8 +23,7 @@
 	<alias binding="strong">
 		<family>sans-serif</family>
 		<prefer>
-			<family>Source Sans 3</family>
-			<family>Iosevka Comfy Duo</family>
+			<family>Liberation Sans</family>
 			<family>Roboto</family>
 		</prefer>
 		<default>
@@ -37,6 +35,7 @@
 		<family>monospace</family>
 		<prefer>
 			<family>Iosevka Nerd Font</family>
+			<family>Liberation Mono</family>
 			<family>Source Code Pro</family>
 		</prefer>
 		<default>
