--- a/gtk/.config/gtk-3.0/settings.ini
+++ b/gtk/.config/gtk-3.0/settings.ini
@@ -1,14 +1,14 @@
 [Settings]
 gtk-application-prefer-dark-theme=1
+gtk-theme-name=Adwaita
+gtk-icon-theme-name=Adwaita
+gtk-font-name=sans-serif-9
+gtk-cursor-theme-name=Adwaita
 gtk-button-images=1
-gtk-cursor-theme-name=Nordzy
 gtk-cursor-theme-size=0
 gtk-enable-event-sounds=1
 gtk-enable-input-feedback-sounds=1
-gtk-font-name=sans-serif-9
-gtk-icon-theme-name=Nordzy
 gtk-menu-images=1
-gtk-theme-name=Nordic
 gtk-toolbar-icon-size=GTK_ICON_SIZE_SMALL_TOOLBAR
 gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
 gtk-xft-antialias=1
