vale: Add package ‘Readability’

--- a/vale/.vale.ini
+++ b/vale/.vale.ini
@@ -1,8 +1,10 @@
+# Note: Install styles by running "vale sync"
+
 StylesPath = ~/.local/share/vale/styles
 
 MinAlertLevel = suggestion
 
-Packages = Google, proselint
+Packages = Google, proselint, Readability
 
 [*]
-BasedOnStyles = Vale, Google, proselint
+BasedOnStyles = Vale, Google, proselint, Readability
