qmk: Update for qmk_userspace
I’m now keeping my keymap in qmk_userspace instead of qmk_firmware.

--- a/qmk/.config/qmk/qmk.ini
+++ b/qmk/.config/qmk/qmk.ini
@@ -1,8 +1,9 @@
 [user]
-qmk_home = /home/david/src/qmk_firmware
 keyboard = splitkb/aurora/sweep/rev1
-keymap = daporter
+keymap = default
 name = daporter
+overlay_dir = ~/src/qmk_userspace
+qmk_home = ~/src/qmk_firmware
 
 [find]
 keymap = default
@@ -13,56 +14,12 @@ keymap = default
 [hello]
 name = World
 
-[config]
-
-[console]
-
 [compile]
 parallel = 8
 
-[docs]
+[config]
 
-[flash]
-
-[format_c]
-
-[format_python]
-
-[format_text]
-
-[generate_autocorrect_data]
-
-[generate_compilation_database]
-
-[generate_develop_pr_list]
-
-[generate_dfu_header]
-
-[generate_info_json]
-
-[generate_make_dependencies]
-
-[git_submodule]
-
-[info]
-
-[lint]
-
-[kle2json]
-
-[list_keymaps]
-
-[list_layouts]
-
-[new_keyboard]
-
-[new_keymap]
-
-[painter_convert_graphics]
-
-[painter_make_font_image]
-
-[painter_convert_font_image]
+[console]
 
 [general]
 
