--- a/qmk/.config/qmk/qmk.ini
+++ b/qmk/.config/qmk/qmk.ini
@@ -2,7 +2,7 @@
 keyboard = splitkb/aurora/sweep/rev1
 keymap = default
 name = daporter
-overlay_dir = ~/src/qmk_userspace
+overlay_dir = ~/projects/qmk_userspace
 qmk_home = ~/src/qmk_firmware
 
 [find]
