redshift: Set location to Canberra

--- a/redshift/.config/redshift/redshift.conf
+++ b/redshift/.config/redshift/redshift.conf
@@ -3,9 +3,9 @@ location-provider=manual
 adjustment-method=randr
 
 [manual]
-; Paris.
-lat=48.85
-lon=2.35
+; Canberra.
+lat=-35.28
+lon=149.13
 
 [randr]
 screen=0
