--- a/fontconfig/.config/fontconfig/conf.d/60-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/60-latin.conf
@@ -11,7 +11,7 @@
 	<alias binding="strong">
 		<family>serif</family>
 		<prefer>
-			<family>Charter</family>
+			<family>XCharter</family>
 			<family>Liberation Serif</family>
 			<family>Source Serif 4</family>
 		</prefer>
