Switch to Seagate drive for backups

--- a/udiskie/.config/udiskie/config.yml
+++ b/udiskie/.config/udiskie/config.yml
@@ -1,4 +1,9 @@
 device_config:
-  - id_uuid:
-      - 55ce61bf-4a3e-4308-97a5-ce1748be69dc
-    automount: false
+  - id_label: restic
+    ignore: true
+
+  - id_label: nas
+    ignore: true
+
+  - id_label: restic_offsite
+    ignore: true
