Improve font choices

--- a/fontconfig/.config/fontconfig/conf.d/45-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/45-latin.conf
@@ -1,53 +1,40 @@
 <?xml version="1.0"?>
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
-	<its:rules xmlns:its="http://www.w3.org/2005/11/its" version="1.0">
-		<its:translateRule translate="no"
-		                   selector="/fontconfig/*[not(self::description)]"/>
-	</its:rules>
+  <its:rules xmlns:its="http://www.w3.org/2005/11/its" version="1.0">
+    <its:translateRule translate="no"
+                       selector="/fontconfig/*[not(self::description)]"/>
+  </its:rules>
 
-	<description>Set substitutions for Latin fonts</description>
+  <description>Set substitutions for Latin fonts</description>
 
-	<!--
-	    Mark common families with their generics so we'll get
-	    something reasonable.
-	-->
+  <!--
+      Mark common families with their generics so we'll get
+      something reasonable.
+  -->
 
-	<!-- Serif -->
+  <!-- Serif -->
 
-	<alias>
-		<family>Libertinus Serif</family>
-		<default><family>serif</family></default>
-	</alias>
-	<alias>
-		<family>Source Serif 4</family>
-		<default><family>serif</family></default>
-	</alias>
   <alias>
-    <family>Iosevka Comfy Motion Duo</family>
+    <family>Minion Pro</family>
+    <default><family>serif</family></default>
+  </alias>
+  <alias>
+    <family>Source Serif 4</family>
     <default><family>serif</family></default>
   </alias>
 
-	<!-- Sans Serif -->
+  <!-- Sans Serif -->
 
   <alias>
-    <family>Iosevka Comfy Duo</family>
+    <family>Source Sans Pro</family>
     <default><family>sans-serif</family></default>
   </alias>
-	<alias>
-		<family>Source Sans 3</family>
-		<default><family>sans-serif</family></default>
-	</alias>
 
-	<!-- Monospaced -->
+  <!-- Monospaced -->
 
-	<alias>
-    <!-- We need the "fixed" variant for programs such as XTerm -->
-    <family>Iosevka Comfy Motion Fixed</family>
+  <alias>
+    <family>IBM Plex Mono</family>
     <default><family>monospace</family></default>
   </alias>
-	<alias>
-		<family>Source Code Pro</family>
-		<default><family>monospace</family></default>
-	</alias>
 </fontconfig>
