--- a/fontconfig/.config/fontconfig/conf.d/60-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/60-latin.conf
@@ -11,6 +11,7 @@
 	<alias binding="strong">
 		<family>serif</family>
 		<prefer>
+			<family>Minion Pro</family>
 			<family>XCharter</family>
 			<family>Liberation Serif</family>
 			<family>Source Serif 4</family>
@@ -23,8 +24,9 @@
 	<alias binding="strong">
 		<family>sans-serif</family>
 		<prefer>
-			<family>Liberation Sans</family>
-			<family>Roboto</family>
+			<family>Source Sans Pro</family>
+			<family>Inter</family>
+			<family>IBM Plex Sans</family>
 		</prefer>
 		<default>
 			<family>DejaVu Sans</family>
@@ -34,9 +36,10 @@
 	<alias binding="strong">
 		<family>monospace</family>
 		<prefer>
-			<family>Iosevka Nerd Font</family>
-			<family>Liberation Mono</family>
+			<family>Inconsolata</family>
 			<family>Source Code Pro</family>
+			<family>IBM Plex Mono</family>
+			<family>Iosevka Nerd Font</family>
 		</prefer>
 		<default>
 			<family>DejaVu Sans Mono</family>
