Minor tweak to font config

--- a/fontconfig/.config/fontconfig/conf.d/45-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/45-latin.conf
@@ -27,7 +27,7 @@
   <!-- Sans Serif -->
 
   <alias>
-    <family>Source Sans Pro</family>
+    <family>Source Sans 3</family>
     <default><family>sans-serif</family></default>
   </alias>
 
