--- a/fontconfig/.config/fontconfig/conf.d/60-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/60-latin.conf
@@ -11,9 +11,9 @@
 	<alias binding="strong">
 		<family>serif</family>
 		<prefer>
+			<family>Spectral</family>
 			<family>Minion Pro</family>
 			<family>XCharter</family>
-			<family>Liberation Serif</family>
 			<family>Source Serif 4</family>
 		</prefer>
 		<default>
@@ -24,7 +24,7 @@
 	<alias binding="strong">
 		<family>sans-serif</family>
 		<prefer>
-			<family>Source Sans Pro</family>
+			<family>Source Sans 3</family>
 			<family>Inter</family>
 			<family>IBM Plex Sans</family>
 		</prefer>
