Install the recommended hyprland apps
Followed instructions at
https://wiki.hypr.land/Hypr-Ecosystem/hyprpolkitagent/

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -47,6 +47,8 @@ $menu = wofi --show drun
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 
+# From instructions at https://wiki.hypr.land/Hypr-Ecosystem/hyprpolkitagent/
+exec-once = systemctl --user start hyprpolkitagent
 
 #############################
 ### ENVIRONMENT VARIABLES ###
