--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -46,6 +46,7 @@ $menu = wofi --show drun
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
+exec-once = waybar
 
 # From instructions at https://wiki.hypr.land/Hypr-Ecosystem/hyprpolkitagent/
 exec-once = systemctl --user start hyprpolkitagent
