Add hyprshot and swaync

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -8,7 +8,7 @@ $terminal = kitty
 $fileManager = thunar
 $browser = firefox
 
-exec-once = waybar
+exec-once = waybar & swaync
 
 # From instructions at https://wiki.hypr.land/Hypr-Ecosystem/hyprpolkitagent/
 exec-once = systemctl --user start hyprpolkitagent
@@ -122,6 +122,9 @@ bind = $mainMod,               Space,  exec, $menu
 bind = $mainMod,               Return, exec, $terminal
 bind = $mainMod,               B,      exec, $browser
 bind = $mainMod CONTROL SHIFT, E,      exec, $fileManager
+bind = $mainMod CONTROL,       S,      exec, hyprshot -m window
+bind = $mainMod CONTROL SHIFT, S,      exec, hyprshot -m region
+
 bind = $mainMod,       Q,      killactive,
 bind = $mainMod,       T,      togglefloating,
 bind = $mainMod,       P,      pseudo,         # dwindle
