Add config for swaync

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -8,10 +8,18 @@ $terminal = kitty
 $fileManager = thunar
 $browser = firefox
 
-exec-once = waybar & swaync
+exec-once = waybar
+
+exec-once = swaync
+exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=Hyprland
+exec-once = hyprctl setcursor Nordzy-cursors-white 24
+exec-once = gsettings set org.gnome.desktop.interface cursor-theme 'Nordzy-cursors-white'
+exec-once = gsettings set org.gnome.desktop.interface cursor-size 24
 
 # From instructions at https://wiki.hypr.land/Hypr-Ecosystem/hyprpolkitagent/
 exec-once = systemctl --user start hyprpolkitagent
+
 
 env = XCURSOR_THEME,Nordzy-cursors-white
 env = XCURSOR_SIZE,24
