--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -154,6 +154,9 @@ bind = $mainMod SHIFT, E, movewindow, u
 bind = $mainMod SHIFT, I, movewindow, d
 bind = $mainMod SHIFT, H, movewindow, r
 
+bind = $mainMod CONTROL, H, workspace, +1
+bind = $mainMod CONTROL, A, workspace, -1
+
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
@@ -165,6 +168,9 @@ bind = $mainMod, 7, workspace, 7
 bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
+
+bind = $mainMod CONTROL SHIFT, H, movetoworkspace, +1
+bind = $mainMod CONTROL SHIFT, A, movetoworkspace, -1
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
