hyprland: add hypridle

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -9,6 +9,7 @@ $fileManager = thunar
 $browser = firefox
 
 exec-once = waybar
+exec-once = hypridle
 
 exec-once = swaync
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
