--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -97,10 +97,10 @@ input {
     kb_layout = us
     kb_variant =
     kb_model =
-    kb_options =
+    kb_options = compose:menu
     kb_rules =
 
-    repeat_delay = 170
+    repeat_delay = 300
     repeat_rate = 90
 
     follow_mouse = 1
