hyprland: explicitly set monitor scaling to 1x

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -1,7 +1,9 @@
 # Refer to the wiki for more information.
 # https://wiki.hypr.land/Configuring/
 
-monitor=,preferred,auto,auto
+# Straight 1x setup for low-resolution displays like 1080p or 1440p
+env = GDK_SCALE,1
+monitor=,preferred,auto,1
 
 $menu = wofi --show drun
 $terminal = kitty
@@ -54,11 +56,11 @@ decoration {
     inactive_opacity = 0.85
 
     blur {
-	enabled = true
-	size = 2
-	passes = 3
-	new_optimizations = true
-	ignore_opacity = true
+        enabled = true
+        size = 2
+        passes = 3
+        new_optimizations = true
+        ignore_opacity = true
     }
 }
 
@@ -109,7 +111,7 @@ input {
     sensitivity = -0.6		# -1.0 - 1.0, 0 means no modification.
 
     touchpad {
-	natural_scroll = false
+        natural_scroll = false
     }
 }
 
