hyprland: set env vars to make apps use Wayland

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -24,12 +24,25 @@ exec-once = gsettings set org.gnome.desktop.interface cursor-size 24
 # From instructions at https://wiki.hypr.land/Hypr-Ecosystem/hyprpolkitagent/
 exec-once = systemctl --user start hyprpolkitagent
 
-
 env = XCURSOR_THEME,Nordzy-cursors-white
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_THEME,Nordzy-cursors-white
 env = HYPRCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt6ct
+
+# Force all apps to use Wayland
+env = GDK_BACKEND,wayland,x11,*
+env = QT_QPA_PLATFORM,wayland;xcb
+env = QT_STYLE_OVERRIDE,kvantum
+env = SDL_VIDEODRIVER,wayland
+env = MOZ_ENABLE_WAYLAND,1
+env = ELECTRON_OZONE_PLATFORM_HINT,wayland
+env = OZONE_PLATFORM,wayland
+env = XDG_SESSION_TYPE,wayland
+
+# Allow better support for screen sharing (Google Meet, Discord, etc)
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_DESKTOP,Hyprland
 
 general {
     gaps_in = 3
