hyprland: tweak gaps & colours

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -45,8 +45,8 @@ env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_DESKTOP,Hyprland
 
 general {
-    gaps_in = 3
-    gaps_out = 5
+    gaps_in = 5
+    gaps_out = 10
 
     border_size = 1
 
@@ -54,6 +54,7 @@ general {
     no_focus_fallback = true
     resize_on_border = true
 
+    col.active_border = rgba(e0dcd4aa)
     col.inactive_border = rgba(595959aa)
 
     layout = dwindle
@@ -77,7 +78,32 @@ decoration {
     }
 }
 
+# https://wiki.hypr.land/Configuring/Variables/#group
+group {
+    col.border_locked_active = -1
+    col.border_locked_inactive = -1
+
+    groupbar {
+        font_size = 12
+        font_family = sans-serif
+        font_weight_active = ultraheavy
+        font_weight_inactive = normal
+
+        indicator_height = 0
+        indicator_gap = 5
+        height = 22
+        gaps_in = 5
+        gaps_out = 0
+
+        gradients = true
+        gradient_rounding = 0
+        gradient_round_only_edges = false
+    }
+}
+
 animations {
+    enabled = yes
+
     # Smooth bezier curves
     bezier = myBezier,     0.05, 0.7, 0.1,  1.0
     bezier = easeOutQuint, 0.22, 1.0, 0.36, 1.0
@@ -95,16 +121,24 @@ dwindle {
      # mainMod + P in the keybinds section below
     pseudotile = true
     preserve_split = true	# You probably want this
+    force_split = 2             # Always split on the right
+}
+
+master {
+    new_status = master
 }
 
 # https://wiki.hypr.land/Configuring/Variables/#misc
 misc {
-    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
+    force_default_wallpaper = 0
     animate_mouse_windowdragging = true
     animate_manual_resizes = true
     disable_splash_rendering = true
-    enable_swallow = true
-    swallow_regex = ^(kitty)$
+    focus_on_activate = true
+}
+
+cursor {
+    hide_on_key_press = true
 }
 
 # https://wiki.hypr.land/Configuring/Variables/#input
