--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -5,7 +5,7 @@
 env = GDK_SCALE,1
 monitor=,preferred,auto,1
 
-$menu = wofi --show drun
+$menu = walker
 $terminal = kitty
 $fileManager = thunar
 $browser = firefox
@@ -13,6 +13,8 @@ $browser = firefox
 exec-once = hyprpaper
 exec-once = waybar
 exec-once = hypridle
+exec-once = elephant
+exec-once = walker --gapplication-service
 
 exec-once = swaync
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
@@ -246,3 +248,6 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+# Application-specific animation
+layerrule = noanim, walker
