hyprland: start 1password

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -26,6 +26,8 @@ exec-once = gsettings set org.gnome.desktop.interface cursor-size 24
 # From instructions at https://wiki.hypr.land/Hypr-Ecosystem/hyprpolkitagent/
 exec-once = systemctl --user start hyprpolkitagent
 
+exec-once = 1password --silent
+
 env = XCURSOR_THEME,Nordzy-cursors-white
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_THEME,Nordzy-cursors-white
